--- a/front/settings/index.html
+++ b/front/settings/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Users Settings</title>
+    <title>i18n Settings</title>
     <style>
         html, body, body>div[zz-bind-root] {
             height: 100%;
